<resources>
    <string name="app_name">CrowdHuman Detector</string>
    <string name="inference_time_label">inference: </string>
    <string name="frame_size_label">frame: </string>
    <string name="immersive_label">full screen: </string>
    <string name="model_label">model: </string>
    <string name="detect_count_label">detected: </string>
    <string name="threshold_label">threshold: </string>
    <string name="default_ms">-- ms</string>
    <string name="default_frame_size">--</string>
    <string name="default_zero">0</string>
    <string name="default_threshold">Threshold: 0.25</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="retry">Retry</string>
    <string name="detection_overlay_desc">Detection result overlay</string>
    <string name="switch_camera_desc">Switch camera</string>
    <string name="screenshot_desc">Take screenshot</string>
    <string name="gallery_desc">Gallery detection</string>
    <string name="rotate_desc">Switch orientation</string>
    <string name="filter_desc">Filter classes</string>

    <string-array name="model">
        <item>yolov5n-320</item>
        <item>yolov5n-160</item>
    </string-array>

    <string-array name="frame_sizes">
        <item>320x240</item>
        <item>480x360</item>
        <item>640x480</item>
        <item>800x600</item>
        <item>1280x960</item>
    </string-array>
</resources>
